@@ -137,6 +137,7 @@
               <version>${micronaut.data.version}</version>
             </path>
           </annotationProcessorPaths>
+          <release>17</release>
           <compilerArgs>
             <arg>--enable-preview</arg>
             <arg>-Amicronaut.processing.group=com.notkamui</arg>
@@ -144,6 +145,15 @@
           </compilerArgs>
           <source>17</source>
           <target>17</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
 
